<resources>
    <string name="app_name">PingPongas</string>
    <string name="button">Button</string>
    <string name="Login" />
    <string name="entrar">Entrar</string>
    <string name="utilizador">Utilizador</string>
    <string name="iniciar_sessao">Iniciar Sessão</string>
    <string name="senha">Senha</string>
    <string name="ainda_nao_tens_conta">Ainda não tens conta?</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="menu">Menu</string>
    <string name="adicionar_partida">Adicionar Partida</string>
    <string name="ranking">Ranking</string>
    <string name="historico">Histórico</string>
    <string name="perfil">Perfil</string>
    <string name="terminar_sessao">Terminar Sessão</string>
    <string name="nova_partida">Nova Partida</string>
    <string name="selecionar_adversario">Selecionar Adversário:</string>
    <string name="pontos">Pontos</string>
    <string name="partida">Partida</string>
    <string name="jogador1">Jogador1</string>
    <string name="jogador2">Jogador2</string>
    <string name="nomeutilizador">NomeUtilizador</string>
    <string name="melhor_pontuacao">Melhor Pontuação</string>
    <string name="adicionar_partida_2">Adicionar Partida</string>
    <string name="partidas_disputadas">Partidas Disputadas</string>
    <string name="pontuacao">Pontuação:</string>
    <string name="alterar_imagem">Alterar Imagem</string>
    <string name="de_vitoria">% de Vitória</string>
    <string name="partidas_ganhas">Partidas Ganhas</string>
    <string name="win_streak">Win Streak</string>
    <string name="melhor_win_streak">Melhor Win Streak</string>
    <string name="galeria">Galeria</string>
    <string name="fragment_one">fragment_one</string>
    <string name="fragment_two">fragment_two</string>
    <string name="fragment_three">fragment_three</string>
    <string name="test1">Test1</string>
    <string name="test2">Test2</string>
    <string name="hist_rico_geral">Histórico Geral</string>
    <string name="meu_hist_rico">Meu Histórico</string>
    <string name="perdedor">Perdedor</string>
    <string name="vencedor">Vencedor</string>
    <string name="ainda_n_o_existem_partidas_disputadas">Ainda não existem partidas disputadas.</string>
    <string-array name="adversarios">
        <item>André</item>
        <item>Andreia</item>
        <item>António</item>
        <item>Filipa</item>
        <item>Gonçalo</item>
        <item>Inês</item>
        <item>Mariana</item>
        <item>Marta</item>
        <item>Pedro</item>
        <item>Rafael</item>
    </string-array>
</resources>